--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Happy Halloween!</title>
 </head>
+
 <body>
-    
+
+    <div class="jumbotron">
+
+
+        <div id="buttons"></div>
+
+        <div class="searchDiv">
+            <input id="search" placeholder="Gif Search"/>
+            <button class="btn btn-info" id="search-button">Add New</button>
+        </div>
+
+    </div>
+
+    <div class="container-fluid align-center">
+
+        <div id="gifs"></div>
+
+
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="assets/javascript/main.js"></script>
+
 </body>
+
 </html>
